--- a/core/components/commerce_gatewayspack1/composer.json
+++ b/core/components/commerce_gatewayspack1/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "php": ">=5.5.0",
-        "nilvola/omnipay-adyen": "dev-completepurchaseresponse"
+        "nilvola/omnipay-adyen": "~1.3"
     },
     "replace": {
         "symfony/event-dispatcher": "~2.7",
@@ -11,11 +11,5 @@
         "psr-4": {
             "modmore\\Commerce\\GatewaysPack1\\" : "src/"
         }
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Mark-H/omnipay-adyen"
-        }
-    ]
+    }
 }
